@@ -52,8 +52,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|DOMUtil
@@ -67,8 +65,6 @@ operator|.
 name|apache
 operator|.
 name|solr
-operator|.
-name|common
 operator|.
 name|util
 operator|.
