@@ -482,8 +482,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|DOMUtil
@@ -498,8 +496,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|FileUtils
@@ -513,8 +509,6 @@ operator|.
 name|apache
 operator|.
 name|solr
-operator|.
-name|common
 operator|.
 name|util
 operator|.
