@@ -54,8 +54,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|DOMUtil
@@ -69,8 +67,6 @@ operator|.
 name|apache
 operator|.
 name|solr
-operator|.
-name|common
 operator|.
 name|util
 operator|.
