@@ -312,8 +312,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|FileUtils
