@@ -298,8 +298,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|FileUtils
