@@ -140,8 +140,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|FastWriter
