@@ -156,8 +156,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|DOMUtil
@@ -187,8 +185,6 @@ operator|.
 name|apache
 operator|.
 name|solr
-operator|.
-name|common
 operator|.
 name|util
 operator|.
