@@ -36,8 +36,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|DOMUtil
