@@ -1,10 +1,6 @@
 begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
-begin_comment
-comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
-end_comment
-
 begin_package
-DECL|package|org.apache.solr.common.util
+DECL|package|org.apache.solr.util
 package|package
 name|org
 operator|.
@@ -12,11 +8,13 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|common
-operator|.
 name|util
 package|;
 end_package
+
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
 
 begin_import
 import|import
@@ -198,7 +196,7 @@ name|SolrTestCaseJ4
 operator|.
 name|getFile
 argument_list|(
-literal|"solrj/solr/conf"
+literal|"solr/conf"
 argument_list|)
 operator|.
 name|getParent
@@ -378,7 +376,7 @@ name|toASCIIString
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// do some real resolves to I nputStreams with real existing files
+comment|// do some real resolves to InputStreams with real existing files
 name|assertEntityResolving
 argument_list|(
 name|resolver
@@ -394,11 +392,11 @@ name|assertEntityResolving
 argument_list|(
 name|resolver
 argument_list|,
-literal|"solrres:/org/apache/solr/common/util/TestSystemIdResolver.class"
+literal|"solrres:/org/apache/solr/util/TestSystemIdResolver.class"
 argument_list|,
-literal|"solrres:/org/apache/solr/common/ResourceLoader.class"
+literal|"solrres:/org/apache/solr/util/RTimer.class"
 argument_list|,
-literal|"util/TestSystemIdResolver.class"
+literal|"TestSystemIdResolver.class"
 argument_list|)
 expr_stmt|;
 name|assertEntityResolving
